--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "prisma": {
     "seed": "yarn rw exec seed"
   },
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "yarn@3.2.0",
+  "dependencies": {
+    "moment": "^2.29.3",
+    "react-tsparticles": "^2.0.6",
+    "tsparticles-slim": "^2.0.6"
+  }
 }
